package entity;

public class Entity {
    String name;
    int id = 0;
    int Xpos;
    int Ypos;
    int movementspeed;

}
