@startuml

class Main{
public static void main(String[] args)
}

class GamePanel{
- int FPS
- int windowLength
- int windowHeight
+ createWindow()
+ run()
+ update()
+ draw()
}

class KeyHandler{
+ boolean UP
+ boolean DOWN
+ boolean LEFT
+ boolean RIGHT
+ boolean Interact
+ void KeyPressed()
+ void KeyReleased()
}




class Tiles{
- String name
- int id
- int XPos
- int YPos
- boolean isWalkable

}

class Entity{
- String name
- int id
- int XPos
- int YPos
- int movementSpeed
}

class GUI{
- String previousMessage
+ void displayMessage()
+ void previousMessage()
+ void nextMessage()
+ void messageDivider()
+ String getMessage(Entity E, String event)
}

class Location{
- String locationName
- int LocationWidth
- int LocationHeight
+ void update()
+ void draw()
+ void collision()
+ void drawLocation()
+ void getLocation()
}

class Player extends Entity implements KeyHandler{
+ void idleState()
+ void update()
+ void draw()
}

class NPC extends Entity{
+ boolean hasMainEvent
+ boolean hasSideEvent
+ String NpcMessage
+ void update()
+ void draw()
+ void interact()
+ void unlockMainEvent()
+ void unlockSideEvent()
}

class MainEvent {
- {static} int eventNumber
+ int getEventNumber()
+ void setEventNumber()
}

class SideEvent{
- boolean unlocked
- int sideEventNumber
}

class SoundSystem{
+ void playTrack(String fileName)
+ void musicBreak(String fileName)
}

class FileIO{
+ void loadSprite()
+ void loadFile()
}



Main -- GamePanel

GamePanel -- KeyHandler


Tiles -- Location

GUI -- MainEvent
GUI -- SideEvent

SoundSystem .. Entity
SoundSystem .. Location
SoundSystem .. KeyHandler

MainEvent -- Location
MainEvent -- NPC
SideEvent -- NPC

@enduml